--- a/css/fools.css
+++ b/css/fools.css
@@ -555,16 +555,16 @@ body{
   height:100%;
   position:fixed;
   top:0;
-  border:dashed 1px #FF1;
+  /*border:dashed 1px #FF1;*/
   display:flex;
   align-items:flex-start;
   justify-content:center;
 }
 #endBTN{
   width:18%;
-  border:1px solid #00F;
+  /*border:1px solid #00F;*/
   transform:scale(1);
-  margin:-7% 0.6% 0 0;
+  margin:-6.5% 0% 0 0;
   cursor:pointer;
   mix-blend-mode: color;
 }
@@ -586,4 +586,24 @@ body{
 }
 #cBTN3{
   opacity:0;
+}
+@media only screen and (orientation: landscape){
+  #centralizeExtra{
+    width:100%;
+    height:100%;
+    position:fixed;
+    top:0;
+    /*border:dashed 1px #FF1;*/
+    display:flex;
+    align-items:center;
+    justify-content:flex-start;
+  }
+  #endBTN{
+    width:16%;
+    /*border:1px solid #00F;*/
+    transform:scale(1);
+    margin:-15.5% 0% 0 -6%;
+    cursor:pointer;
+    mix-blend-mode: color;
+  }
 }
