--- a/design/primary.css
+++ b/design/primary.css
@@ -40,6 +40,45 @@ body{
   background:#050505;
   color:#FFF;
 }
+#extraPaper{
+  width:100%;
+  height:100%;
+  position:fixed;
+  top:0;
+  left:0;
+  /*background:#101010;*/
+  background-image:url(https://i.imgur.com/2vmJkon.png);
+  background-repeat:no-repeat;
+  background-position:center;
+  filter:brightness(50%);
+  background-size:100%;
+  pointer-events:none;
+  z-index:0;
+}
+
+#eyeBall{
+  width:100%;
+  height:100%;
+  position:fixed;
+  top:0;
+  left:0;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  pointer-events:none;
+}
+#eyeIris{
+  width:28%;
+  padding-bottom:28%;
+  background:#050505;
+  border-radius:100%;
+  z-index:2;
+  position:absolute;
+  transition:all ease-out 0.2s;
+  opacity:1;
+  pointer-events:none;
+  z-index:2;
+}
 
 #backpaper{
   width:100%;
@@ -47,7 +86,13 @@ body{
   position:fixed;
   top:0;
   left:0;
-  background:#090909;
+  background-image:url(https://i.imgur.com/kkGulMd.png);
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:100%;
+  filter:drop-shadow(0.15vw 0.15vw 0.6vw #000);
+  pointer-events:none;
+  z-index:1;
 }
 
 /*    -- Custom Background --    */
@@ -57,10 +102,13 @@ body{
   position:fixed;
   top:0;
   left:0;
-  background:center no-repeat;
-  background-image:url(https://i.imgur.com/w6tHpfS.png);
-  background-size:100%;
-  opacity:0.2;
+  background:no-repeat center;
+  background-image:radial-gradient(#1110 15%, #050505 65%);
+  background-size:auto 420%;
+  background-position:0% 50%;
+  background-blend-mode: screen;
+  pointer-events:none;
+  opacity:1;
   z-index:1;
 }
 
@@ -72,15 +120,10 @@ body{
   margin:0;
   top:0;
   left:0;
-  background:no-repeat center;
-  background-image:radial-gradient(#1110 15%, #050505 65%);
-  background-size:auto 420%;
-  background-position:0% 50%;
-  background-blend-mode: screen;
   float:left;
   display:flex;
   justify-content:center;
-  z-index:2;
+  z-index:5;
 }
 
 /*    ///  Layout dos paineis  ///     */
@@ -95,7 +138,7 @@ body{
   display:flex;
   align-items:flex-end;
   position:relative;
-  z-index:2;
+  z-index:5;
   /*border:dashed 1px #FFF;*/
 }
 #conteudoEsquerdo{
@@ -444,6 +487,16 @@ body{
   }
     #collection img{
       width:6.5vw;
+    }
+
+    /*  Design De Items  */
+    .itemDisabled{
+      filter:saturate(0%) blur(0.1vw);
+      opacity:0.1;
+      display:none;
+    }
+    .goldItem{
+      filter: hue-rotate(110deg) drop-shadow(0 0 0.8vw #960);
     }
 
 /*      //    Painel Direito da guia de Boss      //      */
