--- a/design/files/animations.css
+++ b/design/files/animations.css
@@ -1,21 +1,26 @@
-
-
-#checkStatus::before{
+/*****|||||Pass de Usuario Animação||||||********/
+#checkStatus:before{
   content:'👁';
-  opacity:var(--confirmCheckOpacity, 1);
-  transition:all 0.2s ease-in;
+  color:#999;
   animation-name:var(--passCheckIs, none);
   animation-duration:8s;
   animation-timing-function:ease-in-out;
   animation-play-state:var(--animationStateIs, paused);
-  opacity:0;
+  text-align:center;
+}
+#checkStatus:hover{
+  opacity:1;
+  cursor:pointer;
+}
+#checkStatus:focus{
+  opacity:1;
 }
 
 @keyframes correct{
   0%  {content:'✔';}
   1% {content:'✘';}
   2% {content:'♚';}
-  3% {content:'Φ'; opacity:1;}
+  3% {content:'Φ'; opacity:1 !important;}
   4% {content:'♔';}
   5% {content:'✿';}
   6% {content:'✧';}
@@ -34,9 +39,10 @@
   19% {content:'☂';}
   20% {content:'✘';}
   21% {content:'👁';}
-  22% {content:'♞'; text-shadow:0 0 0vw #0F00; color:#7F7;}
-  24% {content:'✔'; text-shadow:0 0 1.5vw #0F0; color:#7F7;}
-  95% {content:'✔'; opacity:1; text-shadow:0 0 1.5vw #0F0; color:#7F7;}
+  22% {content:'⚇';}
+  23% {content:'♞'; text-shadow:0 0 0vw #2F20; color:#999;}
+  24% {content:'✔'; text-shadow:0 0 1vw #2F2; color:#9F9;}
+  95% {content:'✔'; opacity:1 !important; text-shadow:0 0 1vw #2F2; color:#9F9;}
   100%{content:'✔';}
 }
 
@@ -63,8 +69,8 @@
   19% {content:'☂';}
   20% {content:'✘';}
   21% {content:'👁';}
-  22% {content:'♞'; text-shadow:0 0 0vw #F000; color:#999;}
-  24% {content:'✘'; text-shadow:0 0 1.5vw #F00; color:#F88;}
-  95% {content:'✘'; opacity:1; text-shadow:0 0 1.5vw #F00; color:#F88;}
+  22% {content:'♞'; text-shadow:0 0 0vw #F220; color:#999;}
+  24% {content:'✘'; text-shadow:0 0 1vw #F22; color:#F99;}
+  95% {content:'✘'; opacity:1; text-shadow:0 0 1vw #F22; color:#F99;}
   100%{content:'✘';}
 }
