--- a/design/files/animations.css
+++ b/design/files/animations.css
@@ -84,7 +84,7 @@
 @keyframes sacrificeRotate{
   10%{content:'✦';}
   20%{content:'☢';}
-  30%{content:'♦';}
+  30%{content:'♢';}
   40%{content:'☑';}
   50%{content:'🎖';}
   60%{content:'✳';}
