--- a/design/files/animations.css
+++ b/design/files/animations.css
@@ -92,3 +92,42 @@
   80%{content:'I';}
   90%{content:'J';}
 }
+
+
+/*==========Tela de Secret============*/
+#secretScreen1 h1{
+  animation-name:textFade;
+  animation-duration:1s;
+  animation-delay:0s;
+  animation-timing-function:ease-in-out;
+}
+#secretScreen1 h2{
+  animation-name:textFade;
+  animation-duration:1s;
+  animation-delay:0.3s;
+  animation-timing-function:ease-in-out;
+}
+#secretScreen1 h2 i{
+  animation-name:textFade;
+  animation-duration:1s;
+  animation-delay:0.6s;
+  animation-timing-function:ease-in-out;
+}
+#secretScreen1 h3{
+  animation-name:textFade;
+  animation-duration:1s;
+  animation-delay:0.9s;
+  animation-timing-function:ease-in-out;
+}
+#secretScreen1 h4{
+  animation-name:textFade;
+  animation-duration:1s;
+  animation-delay:1.2s;
+  animation-timing-function:ease-in-out;
+}
+
+@keyframes textFade{
+  0%{opacity:0;}
+  10%{opacity:0;}
+  100%{opacity:1;}
+}
