--- a/design/files/animations.css
+++ b/design/files/animations.css
@@ -96,30 +96,35 @@
 
 /*==========Tela de Secret============*/
 #secretScreen1 h1{
+  animation-play-state:var(--secretTextAnimationStatus);
   animation-name:var(--secretTextAnimation);
   animation-duration:1s;
   animation-delay:0s;
   animation-timing-function:ease-in-out;
 }
 #secretScreen1 h2{
+  animation-play-state:var(--secretTextAnimationStatus);
   animation-name:var(--secretTextAnimation);
   animation-duration:1s;
   animation-delay:0.3s;
   animation-timing-function:ease-in-out;
 }
 #secretScreen1 h2 i{
+  animation-play-state:var(--secretTextAnimationStatus);
   animation-name:var(--secretTextAnimation);
   animation-duration:1s;
   animation-delay:0.6s;
   animation-timing-function:ease-in-out;
 }
 #secretScreen1 h3{
+  animation-play-state:var(--secretTextAnimationStatus);
   animation-name:var(--secretTextAnimation);
   animation-duration:1s;
   animation-delay:0.9s;
   animation-timing-function:ease-in-out;
 }
 #secretScreen1 h4{
+  animation-play-state:var(--secretTextAnimationStatus);
   animation-name:var(--secretTextAnimation);
   animation-duration:1s;
   animation-delay:1.2s;
