--- a/design/files/PassAnimation.css
+++ b/design/files/PassAnimation.css
@@ -1,7 +1,7 @@
 
 #passSymbolCicle span::before{
   content:attr(data-quem);
-  animation-name:flickpick;
+  animation-name:var(--rollTheGod);
   animation-duration:3s;
   animation-timing-function:linear;
   animation-iteration-count: 2;
