--- a/design/files/randomAnimations.css
+++ b/design/files/randomAnimations.css
@@ -4,7 +4,9 @@
 #rollIt:hover{
   animation:none;
 }
-
+#rollIt:disabled{
+  animation-name:none;
+}
 
 @keyframes lights{
   20%{text-shadow:0 0 0.7vw #0F0, 0.1vw 0.1vw 0.4vw #0FF, -0.1vw -0.1vw 0.4vw #F00, 0.2vw 0vw 0.4vw #00F, -0.2vw 0vw 0.4vw #82F, 0vw -0.2vw 0.4vw #38F, 0vw 0.2vw 0.4vw #F90;}
