--- a/live/design/fortuneWheel.css
+++ b/live/design/fortuneWheel.css
@@ -636,6 +636,7 @@ body{
   bottom:2vh;
   background:#000C;
   box-shadow:0vw 0.3vw 0.4vw #000;
+  z-index:10;
   transition:all ease-in-out 0.2s;
 }
 #storyBox h1{
