--- a/apps/editor/editor.css
+++ b/apps/editor/editor.css
@@ -174,7 +174,7 @@ fieldset{
 
 #FontFormatting{
   margin:0;
-  position:sticky;
+  position:fixed;
   top:0;
   text-align:center;
   pointer-events:none;
