--- a/barras/papercutout/paperSkin.css
+++ b/barras/papercutout/paperSkin.css
@@ -27,7 +27,7 @@
   --VidaAtual:100%;
 }
 body{
-  background:#080808;
+  background:none;
   display:flex;
   justify-content:center;
   color:#FFF;
