--- a/barras/florais/florais.css
+++ b/barras/florais/florais.css
@@ -7,9 +7,15 @@
   --VidaAtual:100%;
 }
 body{
+  width:100%;
+  height:100%;
+  position:fixed;
+  top:0;
+  left:0;
   background:none;
   display:flex;
   justify-content:center;
+  align-items:center;
   color:#FFF;
 }
 #todo{
